# na

./: .gitignore  Compare.hs  Main.hs  Makefile  README.md  Textus.hs  Typeset.hs  book.mustache  build.sh  chapter.mustache  db.sqlite  shell.nix  textus.cabal  verse.mustache  volume.html  volume.mustache  word.mustache
db/: 02.sqlite  04.sqlite
src/: Textus.hs
src/Textus/: DB.hs  Log.hs  Mustache.hs  VersesDB.hs  WordsDB.hs
src/Textus/Compare/: DB.hs
src/Textus/Typeset/: DB.hs
static/: 00-header.html  01-koine.html  01-titlepage.html  01-titlepage.html.mustache  02-format.html  02-intro.html  02-intro.html.mustache  02-j.html  02-morphology.html  03-format.html  03-format.html.mustache  03-j.html  03-koine.html  04-j.html  04-koine.html  05-j.html  99-footer.html
styles/: article.css  book.css  main.css  normalize.css  volume.css
templates/: book.mustache  chapter.mustache  verse.mustache  volume.mustache  word.mustache
