cabal-version:        2.4
name:                 textus
version:              0.1.0.0

common lang
  default-language:   Haskell2010
  ghc-options:        -Wall -O2

executable textus
  import:             lang
  main-is:            Main.hs
  build-depends:      base >=4 && < 5
                    , textus

library
  import:             lang
  exposed-modules:    Textus
                    , Textus.Log
                    , Textus.VersesDB
                    , Textus.WordsDB
  hs-source-dirs:     src
  build-depends:      base >= 4 && < 5
                    , polysemy
                    , sqlite-simple
                    , text
  default-extensions: BlockArguments
                    , DataKinds
                    , FlexibleContexts
                    , GADTs
                    , LambdaCase
                    , OverloadedStrings
                    , PolyKinds
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeOperators
