cabal-version:        2.4
name:                 textus
version:              0.1.0.0

common lang
  default-language:   Haskell2010
  ghc-options:        -Wall -O2

executable typeset
  import:             lang
  main-is:            Typeset.hs
  build-depends:      base >=4 && < 5
                    , textus

library
  import:             lang
  exposed-modules:    Textus
                    , Textus.Log
                    , Textus.DB
                    , Textus.Mustache
  hs-source-dirs:     src
  build-depends:      base >= 4 && < 5
                    , aeson
                    , polysemy
                    , sqlite-simple
                    , stache
                    , text
  default-extensions: BlockArguments
                    , DataKinds
                    , FlexibleContexts
                    , GADTs
                    , LambdaCase
                    , OverloadedStrings
                    , PolyKinds
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeOperators
